vix/tests/checker-corpus/reject/non-exhaustive-match.vix
enum Mode {
    A,
    B,
}

fn main(m: Mode) -> Int {
    match m {
        Mode::A => 1,
    }
}
